--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -116,8 +116,7 @@
 </ul>
 </li>
 </ol>
-<p></p>
-<br/><br/><br/><br/><span style="color: #000080;"></span>特定設定操作
+<h1>特定設定操作</h1>
 <p>我了解到 Replit、s.cycu.org 和 localhost 分別是三個不同情境下進行個人和分組倉庫設定操作的平台或環境。在這裡，我將提供一般性的指導，因為具體的設定可能取決於你使用的版本控制系統（例如Git）、編程語言和項目需求。</p>
 <h2>Replit</h2>
 <p>當在 Replit 上創建項目時，你可以進行個人和分組倉庫的相關設定。以下是詳細的步驟：</p>
