--- a/content/Localhost.html
+++ b/content/Localhost.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li><a href='W2~W5.html'>W2~W5</a><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">S.cycu.org << <a href='S.cycu.org.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>Localhost</h1>
+    <div id="tipue_search_content">S.cycu.org << <a href='S.cycu.org.html'>Previous</a> <a href='Exercises.html'>Next</a> >> Exercises<br /><h1>Localhost</h1>
 <p><span>在本地開發環境（localhost）進行倉庫設置通常涉及使用版本控制系統，例如Git。以下是一般的步驟，以使用進行解釋：</span></p>
 <ol>
 <li>
@@ -205,8 +205,7 @@ img.add_border {
 </li>
 </ol>
 <p>這些是一般的步驟，具體的命令和設置可能會因項目需求、團隊規範或個人偏好而有所不同。確保你熟悉你所使用版本控制系統的命令和文檔，以確保正確地配置和管理你的本地倉庫。</p>
-<p><br/><br/></p>
-<br />S.cycu.org << <a href='S.cycu.org.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<br />S.cycu.org << <a href='S.cycu.org.html'>Previous</a> <a href='Exercises.html'>Next</a> >> Exercises</div>
         
     <!-- footer -->
       <div class="container">
