--- a/content/Replit.html
+++ b/content/Replit.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li><a href='W2~W5.html'>W2~W5</a><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">IPV4與IPV6網路設定&差異 << <a href='IPV4與IPV6網路設定&差異.html'>Previous</a> <a href='S.cycu.org.html'>Next</a> >> S.cycu.org<br /><h1>Replit</h1>
+    <div id="tipue_search_content">特定設定操作 << <a href='特定設定操作.html'>Previous</a> <a href='S.cycu.org.html'>Next</a> >> S.cycu.org<br /><h1>Replit</h1>
 <p>當在 Replit 上創建項目時，你可以進行個人和分組倉庫的相關設定。以下是詳細的步驟：</p>
 <p><strong>創建項目:</strong></p>
 <ol>
@@ -169,7 +169,7 @@ img.add_border {
 <li>如果你是與其他人協作，你可能還會找到協作相關的選項。</li>
 <li>可能有一些設置，允許其他用戶或團隊成員加入項目並共同編輯。</li>
 </ol>
-<br />IPV4與IPV6網路設定&差異 << <a href='IPV4與IPV6網路設定&差異.html'>Previous</a> <a href='S.cycu.org.html'>Next</a> >> S.cycu.org</div>
+<br />特定設定操作 << <a href='特定設定操作.html'>Previous</a> <a href='S.cycu.org.html'>Next</a> >> S.cycu.org</div>
         
     <!-- footer -->
       <div class="container">
