--- a/content/特定設定操作.html
+++ b/content/特定設定操作.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li><a href='W2~W5.html'>W2~W5</a><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">IPV6 << <a href='IPV6.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>特定設定操作</h1>
+    <div id="tipue_search_content">差異 << <a href='差異.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>特定設定操作</h1>
 <p>我了解到 Replit、s.cycu.org 和 localhost 分別是三個不同情境下進行個人和分組倉庫設定操作的平台或環境。在這裡，我將提供一般性的指導，因為具體的設定可能取決於你使用的版本控制系統（例如Git）、編程語言和項目需求。</p>
-<br />IPV6 << <a href='IPV6.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
+<br />差異 << <a href='差異.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
         
     <!-- footer -->
       <div class="container">
