--- a/config/content.htm
+++ b/config/content.htm
@@ -112,10 +112,71 @@
 <p><span style="color: #000080;"><strong>監視和維護：</strong></span></p>
 <ul>
 <li><span style="color: #000080;">監視IPv6流量，確保沒有未授權的設備使用你的IPv6地址。</span></li>
-<li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span><span style="color: #000080;"></span></li>
+<li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span></li>
 </ul>
 </li>
 </ol>
+<h2>差異</h2>
+<p><span style="background-color: #ffff00;">IPv4</span>（Internet Protocol version 4）和<span style="background-color: #ffff00;">IPv6</span>（Internet Protocol version 6）是兩個不同版本的網際網路協定，主要用於識別和定位網路上的設備。以下是IPv4和IPv6之間的主要差異：</p>
+<ol>
+<li>
+<p><strong>地址位數：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 使用<span style="background-color: #ffffff; color: #ff0000;">32位元</span>的地址，約有42億（2^32）個可能的地址。</li>
+<li><strong>IPv6：</strong> 使用<span style="background-color: #ffffff; color: #ff0000;">128位元</span>的地址，提供了極大的地址空間，約有3.4 x 10^38個可能的地址。</li>
+</ul>
+</li>
+<li>
+<p><strong>地址表示法：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 以<span style="color: #ff0000;">點分十進制</span>表示，例如192.168.0.1。</li>
+<li><strong>IPv6：</strong> 以<span style="color: #ff0000;">冒號分隔</span>的<span style="color: #ff0000;">八組十六進制</span>數字表示，例如2001:0db8:85a3:0000:0000:8a2e:0370:7334。</li>
+</ul>
+</li>
+<li>
+<p><strong>地址配置方式：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 可以使用<span style="color: #ff0000;">靜態配置或DHCP</span>（動態主機配置協定）自動獲取IP地址。</li>
+<li><strong>IPv6：</strong> 支援<span style="color: #ff0000;">靜態配置</span>、<span style="color: #ff0000;">SLAAC</span>（Stateless Address Autoconfiguration）和<span style="color: #ff0000;">DHCPv6</span>。</li>
+</ul>
+</li>
+<li>
+<p><strong>子網遮罩：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 使用<span style="color: #ff0000;">子網遮罩</span>來劃分網路和主機位址，通常是<span style="color: #ff0000;">32位元</span>。</li>
+<li><strong>IPv6：</strong> 使用<span style="color: #ff0000;">前綴</span>來劃分網路和主機位址，通常是<span style="color: #ff0000;">64位元</span>。</li>
+</ul>
+</li>
+<li>
+<p><strong>通訊協議：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 主要使用ARP（地址解析協定）和ICMP（Internet控制消息協定）。</li>
+<li><strong>IPv6：</strong> <span style="color: #ff0000;">不</span>再<span style="color: #ff0000;">使用ARP</span>，而是<span style="color: #ff0000;">使用ICMPv6</span>，還<span style="color: #ff0000;">引入</span>了<span style="color: #ff0000;">新</span>的一些<span style="color: #ff0000;">協定</span>，如<span style="color: #ff0000;">NDP（鄰居發現協定）</span>。</li>
+</ul>
+</li>
+<li>
+<p><strong>NAT（網路位址轉換）需求：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 由於地址空間有限，常需要<span style="color: #ff0000;">使用NAT進行私有</span>網路與<span style="color: #ff0000;">公共</span>網路<span style="color: #ff0000;">之間的轉換</span>。</li>
+<li><strong>IPv6：</strong> 設計目標之一是<span style="color: #ff0000;">提供足夠的地址空間</span>，<span style="color: #ff0000;">減少對NAT的需求</span>。</li>
+</ul>
+</li>
+<li>
+<p><strong>安全性和配置靈活性：</strong></p>
+<ul>
+<li><strong>IPv6：</strong> 在協定層面支援IPsec，而在IPv4中，IPsec通常是一種附加的安全層。</li>
+<li><strong>IPv6：</strong> 提供更好的配置靈活性和簡化的網路管理。</li>
+</ul>
+</li>
+<li>
+<p><strong>廣播：</strong></p>
+<ul>
+<li><strong>IPv4：</strong> 使用廣播通訊，可能會對整個網路產生流量。</li>
+<li><strong>IPv6：</strong> 不再使用廣播，而是使用多播。</li>
+</ul>
+</li>
+</ol>
+<p>總體而言，IPv6被設計為IPv4的升級版本，以應對IPv4地址空間的枯竭問題並提供更多的功能。然而，目前仍然存在大量的IPv4設備和應用程式，因此在過渡期間，IPv4和IPv6將共存。</p>
 <h1>特定設定操作</h1>
 <p>我了解到 Replit、s.cycu.org 和 localhost 分別是三個不同情境下進行個人和分組倉庫設定操作的平台或環境。在這裡，我將提供一般性的指導，因為具體的設定可能取決於你使用的版本控制系統（例如Git）、編程語言和項目需求。</p>
 <h2>Replit</h2>
@@ -236,6 +297,19 @@
 <p>這些是一般的步驟，具體的命令和設置可能會因項目需求、團隊規範或個人偏好而有所不同。確保你熟悉你所使用版本控制系統的命令和文檔，以確保正確地配置和管理你的本地倉庫。</p>
 <h1><span>Exercises</span></h1>
 <h2>W2~W5</h2>
+<p>參考影片進行學習(登入Onedrive方可閱覽)</p>
+<h3>w2</h3>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fa%5Fw2%5F1%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview" target="_blank">說明安裝 Apps, 如何設定網路, 查驗是否正確連網</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fa%5Fw2%5F2%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">說明如何利用近端可攜系統執行 C 程式, 如何利用 ChatGPT 進行對話</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fw2%5F%E5%88%A9%E7%94%A8%20replit%20%E7%B7%A8%E8%BC%AF%E7%B6%B2%E9%A0%81%E5%85%A7%E5%AE%B9%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">說明如何利用 Replit 協助編輯網頁內容</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fw2%5F%E8%AA%AA%E6%98%8E%E5%A6%82%E4%BD%95%E5%BB%BA%E7%AB%8B%E5%80%8B%E4%BA%BA%E5%80%89%E5%84%B2%E4%B8%A6%E4%BD%BF%E7%94%A8%20Replit%20%E5%8D%94%E5%8A%A9%E7%B6%AD%E8%AD%B7%E5%85%A7%E5%AE%B9%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">說明如何 connect Replit to Github, 如何建立個人網站並利用 Replit 啟動編輯網站</a></p>
+<h3>w3</h3>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fw3%5F1a%5F%E6%9C%89%E9%97%9C%E9%9B%BB%E8%85%A6%E8%BC%94%E5%8A%A9%E8%A8%AD%E8%A8%88%E5%AE%A4%E7%B6%B2%E8%B7%AF%E8%A8%AD%E5%AE%9A%E7%9A%84%E5%BB%BA%E8%AD%B0%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">有關電腦輔助設計室網路設定說明</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fw3%5F1a%5F%2Ereplit%5Fand%5Freplit%2Enix%5F%E8%88%8A%20python%20%E8%A8%AD%E5%AE%9A%E8%99%95%E7%90%86%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">處理 .replit 與 replit.nix 中的舊 Python 設定問題</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/personal/yen_nfu_edu_tw/_layouts/15/stream.aspx?id=%2Fpersonal%2Fyen%5Fnfu%5Fedu%5Ftw%2FDocuments%2F2023%2Fcp2023%2Fmp4%2Fcp2023%5Fw3%5F1a%5Fgithub%5Fclassroom%5Fsite%5F%E4%BD%9C%E6%A5%AD%E5%80%89%E5%84%B2%E7%9A%84%5FPages%5F%E8%A8%AD%E5%AE%9A%2Emp4&amp;nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;ga=1&amp;referrer=StreamWebApp%2EWeb&amp;referrerScenario=AddressBarCopied%2Eview">說明如何為 site-個人github帳號 倉儲設定 Github Pages</a></p>
+<p><img alt="" height="139" src="/images/001.png" width="180"/><br/><span>上圖顯示共有三名用戶針對 mdecp2023 帳號下的 Github Classroom 倉儲提出 Replit 連線要求, 其中只有最上方用戶的 request 取得 mdecp2023/site-scrum-1 倉儲的維護權限, 其餘兩則 requests 則仍處於待審核階段. 意即若要讓各用戶整合 Replit, </span><span>每一個 Github Classroom 作業, 管理者都必須手動處理超過兩百則的 requests</span></p>
+<h3><span>w4~w5</span></h3>
+<p><span>各學員自行建立線上考試帳號(已完成)</span></p>
 <h2>W6~W7</h2>
 <p><span>C 程式練習二:</span></p>
 <p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
