--- a/content/W6~W7.html
+++ b/content/W6~W7.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li><a href='W2~W5.html'>W2~W5</a><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2~W5 << <a href='W2~W5.html'>Previous</a> <a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>Next</a> >> C 結合 gd 繪圖程式庫畫出指定Flags<br /><h1>W6~W7</h1>
+    <div id="tipue_search_content">w4~w5 << <a href='w4~w5.html'>Previous</a> <a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>Next</a> >> C 結合 gd 繪圖程式庫畫出指定Flags<br /><h1>W6~W7</h1>
 <p><span>C 程式練習二:</span></p>
 <p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
 <p>2. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Compile 編譯連結後取得 a.out, 然後在命令列中以 a.out 執行.</p>
@@ -352,7 +352,7 @@ void draw_star(gdImagePtr img, int x, int y, int size, int color) {
     gdImageFilledPolygon(img, points, 10, color);
 }</pre>
 <p><img alt="" height="149" src="./../images/usa.png" width="250"/><br/><br/><br/>利用<span>C 與 gnuplot 及 gd 繪圖程式庫的結合以</span>生成台灣國旗以及美國國旗</p>
-<br />W2~W5 << <a href='W2~W5.html'>Previous</a> <a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>Next</a> >> C 結合 gd 繪圖程式庫畫出指定Flags</div>
+<br />w4~w5 << <a href='w4~w5.html'>Previous</a> <a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>Next</a> >> C 結合 gd 繪圖程式庫畫出指定Flags</div>
         
     <!-- footer -->
       <div class="container">
