--- a/content/w4~w5.html
+++ b/content/w4~w5.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,11 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='IPV4與IPV6網路設定&差異.html'>Next</a> >> IPV4與IPV6網路設定&差異<br /><h1>About</h1>
-<p><a href="https://40823241a.github.io/cp2023/content/index.html">個人網站</a></p>
-<p><a href="https://github.com/40823241a/cp2023">個人倉儲</a></p>
-<p></p>
-<br /> <a href='IPV4與IPV6網路設定&差異.html'>Next</a> >> IPV4與IPV6網路設定&差異</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='W6~W7.html'>Next</a> >> W6~W7<br /><h1>w4~w5</h1>
+<p><span>各學員自行建立線上考試帳號(已完成)</span></p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='W6~W7.html'>Next</a> >> W6~W7</div>
         
     <!-- footer -->
       <div class="container">
