--- a/config/content.htm
+++ b/config/content.htm
@@ -110,12 +110,13 @@
 </li>
 <li>
 <p><span style="color: #000080;"><strong>監視和維護：</strong></span></p>
-<ul>
+<ol>
 <li><span style="color: #000080;">監視IPv6流量，確保沒有未授權的設備使用你的IPv6地址。</span></li>
 <li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span></li>
-</ul>
+</ol>
 </li>
 </ol>
+<p> <span style="color: #000080;"><img alt="" height="24" src="/images/ipv6.png" width="200"/></span></p>
 <h2>差異</h2>
 <p><span style="background-color: #ffff00;">IPv4</span>（Internet Protocol version 4）和<span style="background-color: #ffff00;">IPv6</span>（Internet Protocol version 6）是兩個不同版本的網際網路協定，主要用於識別和定位網路上的設備。以下是IPv4和IPv6之間的主要差異：</p>
 <ol>
