--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -110,12 +110,13 @@
 </li>
 <li>
 <p><span style="color: #000080;"><strong>監視和維護：</strong></span></p>
-<ul>
+<ol>
 <li><span style="color: #000080;">監視IPv6流量，確保沒有未授權的設備使用你的IPv6地址。</span></li>
 <li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span></li>
-</ul>
+</ol>
 </li>
 </ol>
+<p> <span style="color: #000080;"><img alt="" height="24" src="/images/ipv6.png" width="200"/></span></p>
 <h2>差異</h2>
 <p><span style="background-color: #ffff00;">IPv4</span>（Internet Protocol version 4）和<span style="background-color: #ffff00;">IPv6</span>（Internet Protocol version 6）是兩個不同版本的網際網路協定，主要用於識別和定位網路上的設備。以下是IPv4和IPv6之間的主要差異：</p>
 <ol>
@@ -310,6 +311,8 @@
 <p><img alt="" height="139" src="/images/001.png" width="180"/><br/><span>上圖顯示共有三名用戶針對 mdecp2023 帳號下的 Github Classroom 倉儲提出 Replit 連線要求, 其中只有最上方用戶的 request 取得 mdecp2023/site-scrum-1 倉儲的維護權限, 其餘兩則 requests 則仍處於待審核階段. 意即若要讓各用戶整合 Replit, </span><span>每一個 Github Classroom 作業, 管理者都必須手動處理超過兩百則的 requests</span></p>
 <h3><span>w4~w5</span></h3>
 <p><span>各學員自行建立線上考試帳號(已完成)</span></p>
+<p><span>依據 <a href="https://qry.nfu.edu.tw/teacher.php?selyr=1121&amp;teacher=%E5%9A%B4%E5%AE%B6%E9%8A%98">112 學年度第一學期教師授課表</a>中的學員修課名單, 利用 Teams 中的 Excel 取學員 Github 帳號.(已完成)</span></p>
+<p><span>各學員自行建立 Github 評分倉儲 cp2023, 並設定 Github Pages(已完成)</span></p>
 <h2>W6~W7</h2>
 <p><span>C 程式練習二:</span></p>
 <p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
