--- a/content/w4~w5.html
+++ b/content/w4~w5.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li>
                       </ul>
                 </nav>
               </div>
@@ -144,6 +144,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='W6~W7.html'>Next</a> >> W6~W7<br /><h1>w4~w5</h1>
 <p><span>各學員自行建立線上考試帳號(已完成)</span></p>
+<p><span>依據 <a href="https://qry.nfu.edu.tw/teacher.php?selyr=1121&amp;teacher=%E5%9A%B4%E5%AE%B6%E9%8A%98">112 學年度第一學期教師授課表</a>中的學員修課名單, 利用 Teams 中的 Excel 取學員 Github 帳號.(已完成)</span></p>
+<p><span>各學員自行建立 Github 評分倉儲 cp2023, 並設定 Github Pages(已完成)</span></p>
 <br />w3 << <a href='w3.html'>Previous</a> <a href='W6~W7.html'>Next</a> >> W6~W7</div>
         
     <!-- footer -->
