--- a/content/C 結合 gd 繪圖程式庫畫出指定Flags.html
+++ b/content/C 結合 gd 繪圖程式庫畫出指定Flags.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6~W7 << <a href='W6~W7.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>C 結合 gd 繪圖程式庫畫出指定Flags</h1>
+    <div id="tipue_search_content">W6~W7 << <a href='W6~W7.html'>Previous</a> <br /><h1>C 結合 gd 繪圖程式庫畫出指定Flags</h1>
 <p><span></span></p>
-<br />W6~W7 << <a href='W6~W7.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<br/><span></span>課程心得
+<p>在學習過程中了解到replit的操作想對於近端可攜程式而言來的毋須網路要求，只要是用IPV6即可進行編輯。</p>
+<!-- editor2 結束 --><hr/>
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p><br />W6~W7 << <a href='W6~W7.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
