--- a/content/IPV6.html
+++ b/content/IPV6.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='IPV4.html'>IPV4</a><li><a href='IPV6.html'>IPV6</a><li><a href='差異.html'>差異</a></li></ul><li class='has-children'><a href='特定設定操作.html'>特定設定操作</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li class='has-children'><a href='Exercises.html'>Exercises</a><ul class='dropdown'><li class='has-children'><a href='W2~W5.html'>W2~W5</a><ul class='dropdown'><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4~w5.html'>w4~w5</a></li></ul><li><a href='W6~W7.html'>W6~W7</a><li><a href='C 結合 gd 繪圖程式庫畫出指定Flags.html'>C 結合 gd 繪圖程式庫畫出指定Flags</a></li>
                       </ul>
                 </nav>
               </div>
@@ -191,12 +191,13 @@ img.add_border {
 </li>
 <li>
 <p><span style="color: #000080;"><strong>監視和維護：</strong></span></p>
-<ul>
+<ol>
 <li><span style="color: #000080;">監視IPv6流量，確保沒有未授權的設備使用你的IPv6地址。</span></li>
 <li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span></li>
-</ul>
+</ol>
 </li>
 </ol>
+<p> <span style="color: #000080;"><img alt="" height="24" src="./../images/ipv6.png" width="200"/></span></p>
 <br />IPV4 << <a href='IPV4.html'>Previous</a> <a href='差異.html'>Next</a> >> 差異</div>
         
     <!-- footer -->
